force-app/main/default/objects/Fiscal_Sponsorship__c/Fiscal_Sponsorship__c.object-meta.xml
<CustomObject>
    <label>Fiscal Sponsorship</label>
    <nameField>
        <displayFormat>FS-{YYYY}-{00000}</displayFormat>
        <label>Fiscal Sponsorship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiscal Sponsorships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>