force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Annual_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report_Status__c</fullName>
    <inlineHelpText>What is the status of the Annual Report.</inlineHelpText>
    <label>Annual Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Report Due</fullName>
            </value>
            <value>
                <fullName>30 Day Request Email Sent</fullName>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Project Complete</fullName>
            </value>
            <value>
                <fullName>No Report Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>