force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Artemis_Rising_Budget__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_Budget__c</fullName>
    <label>Artemis Rising Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>