force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Artemis_Rising_Date_Final_Report__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_Date_Final_Report__c</fullName>
    <label>Artemis Rising Date Final Report</label>
    <type>Date</type>
</CustomField>