force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Artemis_Rising_Date_Funds_Received__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_Date_Funds_Received__c</fullName>
    <label>Artemis Rising Date Funds Received</label>
    <type>Date</type>
</CustomField>