force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Artemis_Rising_Date_Funds_Sent__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_Date_Funds_Sent__c</fullName>
    <label>Artemis Rising Date Funds Sent</label>
    <type>Date</type>
</CustomField>