force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Artemis_Rising_Date_Grant_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_Date_Grant_Agreement__c</fullName>
    <label>Artemis Rising Date of Grant Agreement</label>
    <type>Date</type>
</CustomField>