force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Artemis_Rising_Date_Materials_Received__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_Date_Materials_Received__c</fullName>
    <label>Artemis Rising Date Marterials Received</label>
    <type>Date</type>
</CustomField>