force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Artemis_Rising_EO_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_EO_Insurance__c</fullName>
    <label>Artemis Rising E&amp;O Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>