force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Artemis_Rising_Funds_Received__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_Funds_Received__c</fullName>
    <label>Artemis Rising Funds Received</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>