force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Artemis_Rising_Grantee__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_Grantee__c</fullName>
    <label>Artemis Rising Grantee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>