force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Artemis_Rising_Requested_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Artemis_Rising_Requested_Grant_Amount__c</fullName>
    <label>Artemis Rising Requested Grant Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>