force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>Fiscal Sponsorships</relationshipLabel>
    <relationshipName>Fiscal_Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>