force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fee_Paid__c</fullName>
    <label>Fee Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>