force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Film_Company__c.field-meta.xml
<CustomField>
    <fullName>Film_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Film Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fiscal Sponsorships</relationshipLabel>
    <relationshipName>Fiscal_Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>