force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Film_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Film_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Film Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fiscal Sponsorships</relationshipLabel>
    <relationshipName>Fiscal_Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>