force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Grant_Agreement_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Agreement_Expiration_Date__c</fullName>
    <label>Grant Agreement Expiration Date</label>
    <type>Date</type>
</CustomField>