force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Points_of_Contact_Document_Signed__c.field-meta.xml
<CustomField>
    <fullName>Points_of_Contact_Document_Signed__c</fullName>
    <label>Points of Contact Document Signed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>