force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Fiscal Sponsorships</relationshipLabel>
    <relationshipName>Fiscal_Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>