force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Renewed_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Contract_Date__c</fullName>
    <label>Renewed Contract Date</label>
    <type>Date</type>
</CustomField>