force-app/main/default/objects/Fiscal_Sponsorship__c/fields/Signed_Grant_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Signed_Grant_Agreement__c</fullName>
    <label>Signed Grant Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>