force-app/main/default/objects/Fiscal_Sponsorship__c/fields/W9_Received__c.field-meta.xml
<CustomField>
    <fullName>W9_Received__c</fullName>
    <label>W-9 Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>